Amend date on index banner, amend copy on index, amend all terms and conditions.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container">
         <div class="home-heading">
             <h1>Las Vegas</h1>
-            <h2>April 2021</h2>
+            <h2>July 2021</h2>
         </div>
     </div>
 
@@ -53,7 +53,7 @@
                 <h3>Be part of the exclusive installers 'Premier Club' from Ideal Boilers.</h3>
                 <p><br>The Ideal Premier Club is an exclusive club for loyal Ideal installers and in 2021 we are heading to the entertainment capital of the world, Las Vegas!
                 <br><br>
-                In 2019 we sent our installers on our first Premier Club trip to Miami in the sunshine state of Florida. Visit our dedicated Miami page to see what an amazing time our installers had and be sure to keep the <strong>22nd April – 26th April 2021</strong> free to join us for another awesome adventure!
+                In 2019 we sent our installers on our first Premier Club trip to Miami in the sunshine state of Florida. Visit our dedicated Miami page to see what an amazing time our installers had and be sure to keep the <strong>8th July – 12th July 2021</strong> free to join us for another awesome adventure!
                 <br><br>
                 We will release exclusive trip details right here, so keep checking back for the latest information.
                 </p>
