--- a/terms.html
+++ b/terms.html
@@ -46,12 +46,13 @@
                             “Company” means Ideal Boilers Limited, Company Number: 00322137, whose registered office is at Ideal Boilers Limited, National Avenue, Hull, East Yorkshire, HU5 4JN
                             “Customer” means the selected customers of the Company who purchase Logic+, Logic MAX, Vogue, Vogue MAX, 5YR warranty Ideal Boilers, Gledhill Stainless Lite Plus and Controls "the Qualifying Products" only for re-sale to consumers. All other Ideal Boilers products do not qualify for the incentive.
                             “Participant” means the individual employees nominated by the Customer once the Customer has been notified that it has met its Qualifying Target.
-                            “Qualifying Period” means 1st October 2019 to 31st December 2020. 
-                            “Qualifying Products” means Logic+, Logic MAX, Vogue, Vogue MAX, 5YR Warranty Ideal Boilers, Gledhill Stainless Lite Plus and Controls. 
+                            “Qualifying Period” means 1st October 2019 to 31st March 2021.
+                            ** Following the Covid-19 lockdown, Q2 2020 (April to June 2020) qualifications have become void and an extension into Q1 2021 has been put into place as a replacement **
+                            “Qualifying Products” means Logic+, Logic MAX, Vogue, Vogue MAX, 5YR Warranty Ideal Boilers, Gledhill Stainless Lite Plus and Controls.
                             “Qualifying Target” or “Passport” means any target set by the Company and notified to the Customer in writing.
                             </li>
                             <br>
-                            <li>All purchases of Qualifying Products excluding any replacements or upgrades from the Company and registered during the Qualifying Period will count towards the Qualifying Target. Upon achieving at least 100% of the Qualifying Target and subject always to these Terms and Conditions the Customer may qualify for one place (sharing a twin) at any designated hotel in Las Vegas between 22nd and 26th April 2021 (“the Reward”).</li>
+                            <li>All purchases of Qualifying Products excluding any replacements or upgrades from the Company and registered during the Qualifying Period will count towards the Qualifying Target. Upon achieving at least 100% of the Qualifying Target and subject always to these Terms and Conditions the Customer may qualify for one place (sharing a twin) at any designated hotel in Las Vegas between 8th and 12th July 2021 (“the Reward”).</li>
                             <br>
                             <li>To qualify, all Qualifying Products must be registered on Installer Connect via a single Installer Connect account.</li>
                             <br>
@@ -61,7 +62,7 @@
                             <br>
                             <li>No alternative award (cash or otherwise) will be offered under any circumstances.</li>
                             <br>
-                            <li>Online Registration must be completed and submitted by the Participant by Friday 29 January 2021 once the Qualifying Target has been achieved.</li>
+                            <li>Online Registration must be completed and submitted by the Participant by Friday 30 April 2021 once the Qualifying Target has been achieved.</li>
                             <br>
                             <li>Any decision made by the Company in relation to the Ideal Premier Club Scheme and the Reward shall be final and binding and no correspondence will be entered into.</li>
                             <br>
@@ -103,9 +104,9 @@
                             <br>
                             <li>A force majeure event means any circumstances not in a party's reasonable control including without limitation act of god, floods, fire, terrorist attack, law or action taken by government or any other matter that would prevent hinder or delay performing any of the obligations under this agreement and the party of a force majeure event shall not be in breach of the agreement or otherwise be liable for any such failure or delay in performances and such obligations at the time of performance shall be extended accordingly.</li>
                             <br>
-                            <li>No under 21s will be allowed on the trip</li>
+                            <li>No under 21s will be allowed on the trip.</li>
                             <br>
-                            <li>These terms and conditions shall be governed by English law, and the parties submit to the exclusive jurisdiction of the courts of England and Wales</li>
+                            <li>These terms and conditions shall be governed by English law, and the parties submit to the exclusive jurisdiction of the courts of England and Wales.</li>
                         </ol>
                     </div>
 
@@ -116,11 +117,12 @@
                             Definition<br>
                             “Company” means Ideal Boilers Limited, Company Number: 00322137, whose registered office is at Ideal Boilers Limited, National Avenue, Hull, East Yorkshire, HU5 4JN.
                             “Qualifying Participant” means a participant who has had an Installer Connect Account which has been active from 1st January 2019
-                            “Qualifying Period” means 1st October 2019 to 31st December 2020.
+                            “Qualifying Period” means 1st October 2019 to 31st March 2021.
+                            ** Following the Covid-19 lockdown, Q2 2020 (April to June 2020) qualifications have become void and an extension into Q1 2021 has been put into place as a replacement **
                             “Qualifying Products” means only Logic IE, Vogue IE & Independent boilers for resale to consumers only. "Qualifying Target" or “Passport” means any target for Qualifying Products that has been notified to the Qualifying Participant by the Company.
                             </li>
                             <br>
-                            <li>All purchases of Qualifying Products excluding any replacements or upgrades from the Company and registered during the Qualifying Period will count towards the Qualifying Target. Upon achieving at least 100% of the Qualifying Target and subject always to these Terms and Conditions (the “Ideal Premier Club Scheme”) the Qualifying Participant may qualify for one place (sharing a twin) at any designated hotel in Las Vegas between 22nd April and 26th April 2021 (“the Reward”).</li>
+                            <li>All purchases of Qualifying Products excluding any replacements or upgrades from the Company and registered during the Qualifying Period will count towards the Qualifying Target. Upon achieving at least 100% of the Qualifying Target and subject always to these Terms and Conditions (the “Ideal Premier Club Scheme”) the Qualifying Participant may qualify for one place (sharing a twin) at any designated hotel in Las Vegas between 8th and 12th July 2021 (“the Reward”).</li>
                             <br>
                             <li>To qualify, all Qualifying Products must be registered on Installer Connect via a single Installer Connect account.</li>
                             <br>
@@ -132,7 +134,7 @@
                             <br>
                             <li>The Qualifying Participant shall not be entitled to any alternative to the Reward (cash or otherwise) under any circumstances.</li>
                             <br>
-                            <li>In order to qualify for the Reward online registration must be completed and submitted by the Qualifying Participant by Friday 29 January 2021 if the Qualifying Target has been achieved.</li>
+                            <li>In order to qualify for the Reward online registration must be completed and submitted by the Qualifying Participant by Friday 30 April 2021 if the Qualifying Target has been achieved.</li>
                             <br>
                             <li>Any decision made by the Company in relation to the Ideal Premier Club Scheme and the Reward shall be final and binding and no correspondence will be entered into.</li>
                             <br>
@@ -200,7 +202,7 @@
         <div class="container">
             <div class="flex">
                 <p>Designed by <a href="https://www.firstevent.co.uk/" target="_blank">First Event</a> | 2019</p>
-                <p><a href="">Terms & Conditions</a></p>
+                <p><a href="terms.html">Terms & Conditions</a></p>
         </div>
         </div>
     </div>
