Update logo in all headers, update content to replace Ideal Boilers with Ideal Heating.

--- a/hotel.html
+++ b/hotel.html
@@ -15,7 +15,7 @@
 <header>
     <div class="container">
         <div class="flex">
-        <a href="index.html"><img src="images/Ideal-logo-white2.png" class="header-logo"></a>
+        <a href="index.html"><img src="images/ideal-heating.png" class="header-logo"></a>
             <nav class="nav">
             <a class="skip" href="#menu">Menu</a>
                 <ul id="menu">
@@ -59,23 +59,23 @@
         <div class="hotel-gallery-holder">
             <h3>Hotel Gallery</h3>
             <div class="flex">
-                <img src="https://res.cloudinary.com/first-event/image/upload/v1582560409/botanical-gardens_jujjgu.jpg" class="hotel-gall-img" alt="Bellagio hotel botanical gardens">
+                <img src="images/botanical-gardens.jpg" class="hotel-gall-img" alt="Bellagio hotel botanical gardens">
 
-                <img src="https://res.cloudinary.com/first-event/image/upload/v1582560409/hotel-fountains_s6o2ul.jpg" class="hotel-gall-img" alt="bellagio hotel fountains">
+                <img src="images/Fountains.jpg" class="hotel-gall-img" alt="bellagio hotel fountains">
 
-                <img src="https://res.cloudinary.com/first-event/image/upload/v1582560409/hotel-casino_nyfsho.jpg" class="hotel-gall-img" alt="bellagio hotel casino">
+                <img src="images/hotel-casino.jpg" class="hotel-gall-img" alt="bellagio hotel casino">
 
-                <img src="https://res.cloudinary.com/first-event/image/upload/v1582560409/hotel-dining_qxl6iu.jpg" class="hotel-gall-img" alt="bellagio hotel dining area">
+                <img src="images/hotel-dining2.jpg" class="hotel-gall-img" alt="bellagio hotel dining area">
 
-                <img src="https://res.cloudinary.com/first-event/image/upload/v1582560410/hotel-lobby_roz6cb.jpg" class="hotel-gall-img" alt="bellagio hotel lobby">
+                <img src="images/hotel-lobby.jpg" class="hotel-gall-img" alt="bellagio hotel lobby">
 
-                <img src="https://res.cloudinary.com/first-event/image/upload/v1582560409/hotel-fountains2_r8h3qo.jpg" class="hotel-gall-img" class="hotel bellagio fountains at dusk">
+                <img src="images/hotel-fountains2.jpg" class="hotel-gall-img" class="hotel bellagio fountains at dusk">
 
-                <img src="https://res.cloudinary.com/first-event/image/upload/v1582560410/hotel-pool-fountain_yczfyv.jpg" class="hotel-gall-img" class="hotel bellagio pool fountain">
+                <img src="images/hotel-pool-fountain.jpg" class="hotel-gall-img" class="hotel bellagio pool fountain">
 
-                <img src="https://res.cloudinary.com/first-event/image/upload/v1582560409/hotel-dining2_eggstz.jpg" class="hotel-gall-img" alt="hotel bellagio patio area">
+                <img src="images/lago.jpg" class="hotel-gall-img" alt="hotel bellagio patio area">
 
-                <img src="https://res.cloudinary.com/first-event/image/upload/v1582560409/hotel-pool_ejpmld.jpg" class="hotel-gall-img" alt="hotel bellagio pool">
+                <img src="images/Pool2.jpg" class="hotel-gall-img" alt="hotel bellagio pool">
             </div>
         </div>
     </div>
