--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 <header>
     <div class="container">
         <div class="flex">
-        <a href="index.html"><img src="images/Ideal-logo-white2.png" class="header-logo"></a>
+        <a href="index.html"><img src="images/ideal-heating.png" class="header-logo"></a>
             <nav class="nav">
             <a class="skip" href="#menu">Menu</a>
                 <ul id="menu">
@@ -49,7 +49,7 @@
     <div class="container">
         <div class="flex">
             <div class="contact-content">
-                <h3>At Ideal Boilers, we are committed to delivering the highest level of customer service. </h3>
+                <h3>At Ideal Heating, we are committed to delivering the highest level of customer service. </h3>
                <br> <p>With more than 100 years' experience in the heating industry, we know how important confidence and trust are to our customer. We're more than just your average boiler company.
                 <br><br>
                 We strive to keep our installers at the heart of everything we do. From in-depth product information and on-site training to Installer Connect rewards and business support, we can ensure you'll get more 
