--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <header>
     <div class="container">
         <div class="flex">
-        <a href="index.html"><img src="images/Ideal-logo-white2.png" class="header-logo"></a>
+        <a href="index.html"><img src="images/ideal-heating.png" class="header-logo"></a>
             <nav class="nav">
             <a class="skip" href="#menu">Menu</a>
                 <ul id="menu">
@@ -50,7 +50,7 @@
     <div class="container">
         <div class="flex">
             <div class="home-content">
-                <h3>Be part of the exclusive installers 'Premier Club' from Ideal Boilers.</h3>
+                <h3>Be part of the exclusive installers 'Premier Club' from Ideal Heating.</h3>
                 <p><br>The Ideal Premier Club is an exclusive club for loyal Ideal installers and in 2021 we are heading to the entertainment capital of the world, Las Vegas!
                 <br><br>
                 In 2019 we sent our installers on our first Premier Club trip to Miami in the sunshine state of Florida. Visit our dedicated Miami page to see what an amazing time our installers had and be sure to keep the <strong>8th July – 12th July 2021</strong> free to join us for another awesome adventure!
