--- a/terms.html
+++ b/terms.html
@@ -15,7 +15,7 @@
 <header>
     <div class="container">
         <div class="flex">
-        <a href="index.html"><img src="images/Ideal-logo-white.png" class="header-logo"></a>
+        <a href="index.html"><img src="images/ideal-heating.png" class="header-logo"></a>
             <nav class="nav">
             <a class="skip" href="#menu">Menu</a>
                 <ul id="menu">
