Add Ideal Heating Black logo to login page.

--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 <body  class="login-bod">
     <div class="login-container">
         <div class="login-content">
-           <a href="index.html"><img src="images/Ideal-logo.png" class="login-logo"></a>
+           <a href="index.html"><img src="images/ideal-heating-black.png" class="login-logo"></a>
 
             <h1>Login</h1>
 
